<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textHobbyIcon"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:background="@drawable/bg_hobby_icon_running"
                android:gravity="center"
                android:textSize="29sp" />

            <TextView
                android:id="@+id/textHobbyName"
                style="@style/TextAppearance.HobbyMate.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/sample_hobby_name" />
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:useDefaultMargins="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="76dp"
                android:layout_columnWeight="1"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_input"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expected_cost"
                    android:textColor="@color/on_surface_variant"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textCostValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/cost_value"
                    android:textColor="@color/on_background"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="76dp"
                android:layout_columnWeight="1"
                android:layout_marginStart="5dp"
                android:background="@drawable/bg_input"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/required_place"
                    android:textColor="@color/on_surface_variant"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textPlaceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/place_value"
                    android:textColor="@color/on_background"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="76dp"
                android:layout_columnWeight="1"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_input"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty"
                    android:textColor="@color/on_surface_variant"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textDifficultyValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/difficulty_value"
                    android:textColor="@color/on_background"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="76dp"
                android:layout_columnWeight="1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/bg_input"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/supplies"
                    android:textColor="@color/on_surface_variant"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textSuppliesValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/supplies_value"
                    android:textColor="@color/on_background"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </GridLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChooseHobby"
            style="@style/Widget.HobbyMate.PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="45dp"
            android:text="@string/start_this_hobby" />
    </LinearLayout>
</ScrollView>
